# learn-cpp

./: .clang-format  .gitignore  CMakeLists.txt  makefile
fave-num/src/: main.cpp
kata/: kata-test.cpp  kata.cpp  kata.h
say-hi/src/: main.cpp
sqft/src/: main.cpp
test/: CMakeLists.txt
test-2/src/: main.cpp
test/src/: main.cpp
